--- a/camel-commons-azure-servicebus/pom.xml
+++ b/camel-commons-azure-servicebus/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>nl.axians.camel</groupId>
         <artifactId>camel-commons</artifactId>
-        <version>1.0.0</version>
+        <version>1.0.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>camel-commons-azure-servicebus</artifactId>
