--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
     <groupId>nl.axians.camel</groupId>
     <artifactId>camel-commons</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>Axians :: Camel :: Commons</name>
@@ -38,7 +38,7 @@
         <connection>scm:https://github.com/axians-oss/camel-commons.git</connection>
         <developerConnection>scm:git:https://github.com/axians-oss/camel-commons.git</developerConnection>
         <url>https://github.com/axians-oss/camel-components</url>
-        <tag>1.0.0</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <properties>
